# nvbench-kernels

./: .clang-format  .gitignore  CMakeLists.txt  README.md
kernels/: axes.cu  elementwise_add.cu  elementwise_exp.cu  half.cu  loop_unroll.cu  relu.cu  sigmoid.cu  throughput.cu
